src/style/content.scss
h1,h2,h3,h4,h5,h6 {
	margin: 0;

	font-family: var(--font-alt);
	font-weight: var(--font-strong);
	font-size: var(--font-lg);
	line-height: 1.2;
	letter-spacing: var(--letter-spacing);

	color: var(--color-dim);
}

h1 {
	padding-top: var(--space-lg);
	padding-bottom: var(--space-lg);

	text-align: center;

	font-size: var(--font-xl);
	text-transform: uppercase;

	color: var(--color-accent);
}

h2 {
	font-size: var(--font-lg);
	// font-variant-caps: small-caps;
}

h3 {
	font-size: var(--font-base)
}

main {
    font-size: var(--font-base);
}

p {
    padding-top: var(--space-sm);
	// TODO: Introduce hyphenation through mdsvex pipe if possible.
	// text-align: justify;
}

p + p {
	margin-top: var(--space-sm);
}

// First paragraph deserves a special styling :)
h1 + p {
	display: block;
	margin-bottom: var(--space-lg);

	border-top: var(--border-light) solid var(--color-light);
	border-bottom: var(--border-light) solid var(--color-light);

	padding-top: var(--space-base);
	padding-bottom: var(--space-base);

	padding-left: var(--space-lg);
	padding-right: var(--space-lg);

	@media (min-width: 35rem) {
		padding-left: var(--space-xl);
		padding-right: var(--space-xl);
	}

	@media (min-width: 50rem) {
		padding-left: var(--space-2xl);
		padding-right: var(--space-2xl);
	}
}

// Is there a better solution? We need spacing before headings if they come
// after other content, but not after other headings.
p + h2, p + h3, details + h2, blockquote + h2 {
	margin-top: var(--space-base);
}

:where(h2, h3, h4, h5, h6) {
	.icon-link {
		position: relative;

		&::before {
			content: '🔗';
			position: absolute;
			left: -2rem;
			top: 0;
			opacity: 0;
			color: var(--color-accent);
		}
	}

	&:hover .icon-link::before {
		opacity: 1;
	}
}

main a {
	// small-caps variant does not work on iOS
	// font-variant-caps: small-caps;
	// letter-spacing: var(--letter-spacing);
	// TODO: try using variable font instead

	color: var(--color-accent);
	font-family: var(--font-alt);
	font-weight: var(--font-normal);

	&:is(:hover, :focus, :active) {
		color: var(--color-dim);
	}
}

main ul {
	list-style-type: '—';
}

main li {
	margin-left: var(--space-lg);
	padding-left: var(--space-sm);
}

main img {
	width: 100%;
	box-shadow: 0 1px 1px rgba(0,0,0,0.15),
				0 2px 2px rgba(0,0,0,0.15),
				0 4px 4px rgba(0,0,0,0.15),
				0 8px 8px rgba(0,0,0,0.15);
}

main table {
	border-collapse: collapse;

	th {
		text-align: left;

		border-bottom: var(--border-base) solid var(--color-accent);
	}

	th, td {
		padding-top: var(--space-xs);
		padding-bottom: var(--space-xs);
		padding-left: var(--space-xs);
		padding-right: var(--space-base);
	}
}

pre {
	font-size: 16px;
	font-family: var(--font-code);
	background-color: rgba(255, 255, 255, 0.45);
	border-radius: 3px;
	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
	padding: 0.5em;
	overflow-x: auto;
	color: var(--color-main);
}

.katex-display {
	// https://katex.org/docs/issues.html#css-customization
	overflow: auto hidden;
}

